--- a/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
@@ -138,8 +138,7 @@
                                 <f:event type="preRenderView" listener="#{controlConcepto.recordarSeleccion()}"/>
                                 <p:ajax event="filter" listener="#{controlConcepto.eventoFiltrar()}" />
 
-                                <p:column id="columnaDetalleConcepto" width="19" 
-                                          style="padding-left: 5px; padding: 0px; text-align: center" >                                                              
+                                <p:column id="columnaDetalleConcepto" width="19" style="padding-left: 5px; padding: 0px; text-align: center" >                                                              
                                     <f:facet name="header">
                                         <h:outputText id="DetalleC" value="D"/>
                                         <p:tooltip for="DetalleC" value="Detalle Concepto"/>
