--- a/DesignerRHN/DesignerRHN-war/web/tipocontrato.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipocontrato.xhtml
@@ -72,22 +72,22 @@
                                 <p:tooltip  for="rastro" value="#{msg['rastro']}"/>
 
                                 <p:separator style="position: relative; top: -9px"/> 
-                                <p:commandButton id="refrescar" value="" style="background-image: url(Imagenes/Iconos/refrescar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px " 
+                                <p:commandButton id="refrescar" value="" style="background-image: url(Imagenes/Iconos/refrescar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px;" 
                                                  actionListener="#{controlTipoContrato.cancelarModificacionGeneral()}" oncomplete="window.location.reload()" process="@this"/>  
                                 <p:tooltip  for="refrescar" value="#{msg['refrescar']}"/>
 
                                 <p:separator style="position: relative; top: -9px"/> 
-                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/Iconos/salir.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px "
+                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/Iconos/salir.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px;"
                                                  action="#{controlTipoContrato.redirigir()}" actionListener="#{controlTipoContrato.salir()}" process="@this"/>  
                                 <p:tooltip  for="salir" value="#{msg['salir']}"/>
 
                             </p:toolbarGroup>  
                         </p:toolbar> 
 
-                        <fieldset style="position: absolute; left: 10px; top: 65px; width: 830px; height: 223px; border-radius: 10px; padding-top: initial; ">
+                        <fieldset style="position: absolute; left: 10px; top: 65px; width: 830px; height: 253px; border-radius: 10px; padding-top: initial;">
                             <legend style="color: blue"><strong>#{msg['tipoContrato']}</strong></legend>
 
-                            <p:dataTable id="datosTipoContrato" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="border: 1px; text-align: left;width: 810px"                           
+                            <p:dataTable id="datosTipoContrato" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="border: 1px; text-align: left; width: 810px;"                           
                                          value="#{controlTipoContrato.listaTiposContratos}" scrollable="true" scrollHeight="#{controlTipoContrato.altoTablaTiposC}"  scrollWidth="825"
                                          filteredValue="#{controlTipoContrato.filtrarListaTiposContratos}" emptyMessage="#{msg['vacio']}" selectionMode="single"
                                          editable="true" editMode="cell" liveScroll="true" scrollRows="15" selection="#{controlTipoContrato.tipoContratoSeleccionado}">
@@ -141,7 +141,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column  style="padding: 0px; alignment-adjust: central; text-align: center;" width="60" headerText="VE" sortBy="#{info.vinculacionempresa}" filterBy="#{info.vinculacionempresa}" filterMatchMode="contains" 
+                                <p:column  style="padding: 0px; alignment-adjust: central; text-align: center;" width="60" headerText="VE" sortBy="#{info.vinculacionempresacmp}" filterBy="#{info.vinculacionempresacmp}" filterMatchMode="contains" 
                                            id="tipoCVE" filterStyle="display: none; visibility: hidden;" >     
                                     <f:facet name="header" >
                                         <h:outputText id="headerVE" value="VE" />
@@ -149,12 +149,12 @@
                                     </f:facet>
                                     <p:cellEditor>  
                                         <f:facet name="output">
-                                            <h:outputText value="#{info.vinculacionempresa}"/>
+                                            <h:outputText value="#{info.vinculacionempresacmp}"/>
                                         </f:facet>
                                         <f:facet name="input">
-                                            <p:selectOneMenu value="#{info.vinculacionempresa}"  style="width: 55px; font-weight: bold;text-transform: uppercase; text-align: left;">  
-                                                <f:selectItem itemLabel="#{msg['si']}" itemValue="S" />  
-                                                <f:selectItem itemLabel="#{msg['no']}" itemValue="N" />  
+                                            <p:selectOneMenu value="#{info.vinculacionempresacmp}"  style="width: 55px; font-weight: bold;text-transform: uppercase; text-align: left;">  
+                                                <f:selectItem itemLabel="#{msg['si']}" itemValue="SI" />  
+                                                <f:selectItem itemLabel="#{msg['no']}" itemValue="NO" />  
                                                 <p:ajax event="change" listener="#{controlTipoContrato.modificarTipoContrato(info)}" process="@this"/>
                                                 <p:ajax event="select" listener="#{controlTipoContrato.cambiarIndice(info, 3)}"  process="@this"/>
                                             </p:selectOneMenu>
@@ -181,11 +181,11 @@
                             <h:outputText id="informacionRegistroTC" value="#{msg['infoRegistro']} #{controlTipoContrato.infoRegistroTipoContrato}" style="position: relative; left: 15px; top: 0px; font-weight: bold"/>
                         </fieldset> 
 
-                        <fieldset style="position: absolute; left: 10px; top: 302px; width: 415px; height: 166px; border-radius: 10px; padding-top: initial; ">
+                        <fieldset style="position: absolute; left: 10px; top: 332px; width: 375px; height: 136px; border-radius: 10px; padding-top: initial; ">
                             <legend style="color: blue"><strong>#{msg['diasLaborales']}</strong></legend>
 
-                            <p:dataTable id="datosDiasLaborables" widgetVar="datosDiasLaborables" var="infoD" rowKey="#{infoD.secuencia}" rowIndexVar="indiceD" style="border: 1px; text-align: left;width: 400px"
-                                         value="#{controlTipoContrato.listaDiasLaborables}" scrollable="true" scrollHeight="#{controlTipoContrato.altoTablaDiasLab}" scrollWidth="415"
+                            <p:dataTable id="datosDiasLaborables" widgetVar="datosDiasLaborables" var="infoD" rowKey="#{infoD.secuencia}" rowIndexVar="indiceD" style="border: 1px; text-align: left; width: 360px"
+                                         value="#{controlTipoContrato.listaDiasLaborables}" scrollable="true" scrollHeight="#{controlTipoContrato.altoTablaDiasLab}" scrollWidth="375"
                                          filteredValue="#{controlTipoContrato.filtrarListaDiasLaborables}" emptyMessage="#{msg['vacio']}" selectionMode="single"
                                          editable="true" editMode="cell" liveScroll="true" scrollRows="10" selection="#{controlTipoContrato.diaLaborableSeleccionado}">
 
@@ -255,42 +255,42 @@
                             <h:outputText id="informacionRegistroDias" value="#{msg['infoRegistro']} #{controlTipoContrato.infoRegistroTipoDia}" style="position: relative; left: 15px; top: 0px; font-weight: bold"/>
                         </fieldset> 
 
-                        <fieldset style="position: absolute; left: 450px; top: 302px; width: 390px; height: 166px; border-radius: 10px; padding-top: 0px; ">
+                        <fieldset style="position: absolute; left: 410px; top: 332px; width: 430px; height: 136px; border-radius: 10px; padding-top: 0px; ">
                             <legend style="color: blue"><strong>#{msg['clonarTC']}</strong></legend>
 
                             <h:outputText value="#{msg['codigo']}" style="display: inline-block; position: relative; top : 5px; left: 20px"/> 
-                            <h:outputText value="#{msg['nombreNClonarTC']}" style="display: inline-block; position: relative; top : 5px; left: 90px"/>
+                            <h:outputText value="#{msg['nombreNClonarTC']}" style="display: inline-block; position: relative; top : 5px; left: 70px"/>
 
                             <p:inputText onclick="select();" id="codigoTipoCClonar" value="#{controlTipoContrato.codigoTipoCClonar}" 
-                                         style="display: block; position: relative; top : 12px; left: 10px;width: 75px;text-transform: uppercase">
+                                         style="display: block; position: relative; top : 11px; left: 10px;width: 75px;text-transform: uppercase">
                                 <pe:keyFilter for="codigoTipoCClonarBase" mask="num"/>
                                 <p:ajax event="change" update="codigoTipoCClonar" process="@this"/>
                             </p:inputText>
                             <p:inputText onclick="select();" id="nombreTipoCClonar" maxlength="30" value="#{controlTipoContrato.nombreTipoCClonar}" 
-                                         style="display: inline-block; position: relative; top : -13px; left: 120px;width: 200px;text-transform: uppercase">
+                                         style="display: inline-block; position: relative; top : -13px; left: 100px; width: 220px;text-transform: uppercase">
                                 <p:ajax event="change" update="nombreTipoCClonar" process="@this"/>
                             </p:inputText>
 
                             <h:outputText value="#{msg['codigo']}" style="display: block; position: relative; top : 0px; left: 20px"/> 
-                            <h:outputText value="#{msg['nombreBClonarTC']}" style="display: inline-block; position: relative; top : -15px; left: 125px"/> 
+                            <h:outputText value="#{msg['nombreBClonarTC']}" style="display: inline-block; position: relative; top : -15px; left: 105px"/> 
 
                             <p:inputText onclick="select();" id="codigoTipoCClonarBase" value="#{controlTipoContrato.tipoContratoAClonar.codigo}"
-                                         style="display: block; position: relative; top : -10px; left: 10px;width: 75px">
+                                         style="display: block; position: relative; top : -14px; left: 10px;width: 75px">
                                 <pe:keyFilter for="codigoTipoCClonarBase" mask="num"/>
                                 <p:ajax event="change" update="codigoTipoCClonarBase" process="@this" listener="#{controlTipoContrato.autoCompletarSeleccionarTipoContratoClonar(controlTipoContrato.tipoContratoAClonar.codigo,0)}"/>
                                 <p:ajax event="select" process="@this" listener="#{controlTipoContrato.posicionTipoContratoClonar()}"/>
                                 <p:ajax event="dblclick" process="@this" listener="#{controlTipoContrato.dispararDialogoClonarTipoContrato()}"/>
                             </p:inputText>
                             <p:inputText onclick="select();" id="nombreTipoCClonarBase" value="#{controlTipoContrato.tipoContratoAClonar.nombre}" 
-                                         style="display: inline-block; position: relative; top : -38px; left: 120px;width: 200px;text-transform: uppercase">
+                                         style="display: inline-block; position: relative; top : -38px; left: 100px; width: 220px;text-transform: uppercase">
                                 <p:ajax event="change" update="nombreTipoCClonarBase" process="@this" listener="#{controlTipoContrato.autoCompletarSeleccionarTipoContratoClonar(controlTipoContrato.tipoContratoAClonar.nombre,1)}"/>
                                 <p:ajax event="select" process="@this" listener="#{controlTipoContrato.posicionTipoContratoClonar()}"/>
                                 <p:ajax event="dblclick" process="@this" listener="#{controlTipoContrato.dispararDialogoClonarTipoContrato()}"/>
                             </p:inputText>
 
-                            <p:commandButton value="#{msg['clonar']}" actionListener="#{controlTipoContrato.verificarclonarTipoContrato}" icon="ui-icon-extlink"
-                                             style="position: relative; top : -2px; left: 40px; height: 35px; width: 130px; 
-                                             background-image: url(Imagenes/Iconos/boton.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; color: white;"/>
+                            <p:commandButton id="BtnClonar" value="" actionListener="#{controlTipoContrato.verificarclonarTipoContrato}" style="position: relative; top : -100px; left: 360px; 
+                                             height: 50px; width: 50px; display: block; background-size: 100% 100%; color: white;"/>
+                            <p:tooltip for="BtnClonar" value="#{msg['clonar']}"/>
                         </fieldset> 
 
                         <p:commandButton style="position: absolute; left: 683px; top: 482px; height: 30px; width: 90px; background-image: url(Imagenes/Iconos/aceptar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none;" id="ACEPTAR" value="" onclick="confirmarGuardarSalida.show();" disabled="#{controlTipoContrato.cambiosPagina}" process="@this" />
