2016 junio 16 Edwin Hastamorir Se modifican los id de los elementos gráficos de la página NominaF.

--- a/DesignerRHN/DesignerRHN-war/web/iniciored.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/iniciored.xhtml
@@ -222,7 +222,7 @@
             </p:dialog>
 
             <p:dialog id="estadoSesion" header="Informaci&oacute;n" widgetVar="estadoSesion"  resizable="false" draggable="false" modal="true" height="65" width="350px" style="font-size: 12px" closable="false">  
-                <h:graphicImage value="Imagenes/Iconos/cargando.gif" width="50" height="50" />
+                <h:graphicImage value="Imagenes/Iconos/cargando.gif" width="50" height="50" style="vertical-align: middle;" />
                 <h:outputText value="#{controlInicioRed.msgSesion}" style="font-size: 12px; width: 240px; text-align: justify; font-weight:bold;" />
             </p:dialog>
         </h:form>
